# huly-cli

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  dev  justfile  lefthook.yml  mkdocs.yml  pyproject.toml  zensical.toml
.claude/agents/: justfile-expert.md  mkdocs-documentation-writer.md
.claude/skills/golang-cobra-development/: SKILL.md
.github/workflows/: ci.yml  pages.yml
.superpowers/sdd/: progress.md
config/: huly.yaml.example
docker/: Dockerfile.huly
docs/: auth.md  cache.md  completion.md  components.md  index.md  planning.md  skills.md  usage.md
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-06-25-huly-cli.md  2026-07-07-huly-skills-phase-a1.md  2026-07-07-huly-skills-phase-a2.md  2026-07-07-huly-skills-phase-b.md  2026-07-07-huly-skills-phase-c.md  2026-07-07-login-otp-tui.md
docs/superpowers/specs/: 2026-06-25-huly-cli-design.md  2026-07-07-huly-skills-distribution-design.md  2026-07-07-login-otp-tui-design.md
just/: certs.just  cicd.just  compose.just  config.just  copier.just  dev.just  docker.just  docs.just  git.just  go.just  release.just  testing.just
src/huly/: go.mod  go.sum  main.go
src/huly/cmd/: auth.go  auth_test.go  cache.go  cache_test.go  client.go  completion_funcs.go  completion_funcs_test.go  component.go  component_test.go  config.go  config_set_test.go  issue.go  issue_test.go  login.go  login_prefill_test.go  login_test.go  login_tui.go  milestone.go  milestone_test.go  project.go  project_test.go  resolve.go  resolve_test.go  root.go  skills.go  skills_run.go  (+5 more)
(+39 files in other folders)
